--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "author": "Santosh Anand",
   "license": "MIT",
   "dependencies": {
-    "puppeteer": "^1.13.0"
+    "puppeteer": "1.13.0"
   },
   "devDependencies": {},
   "repository": {
